--- a/NutriAI/NutriAI.csproj
+++ b/NutriAI/NutriAI.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NutriAIServicio\NutriAIServicio.csproj" />
+  </ItemGroup>
+
 </Project>
