--- a/NutriAI/appsettings.json
+++ b/NutriAI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "NutriAIConnection": "Server=BRIAN\\SQLEXPRESS;Database=NutriAI_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
